# oneGBSortChallenge

./: .gitignore  CMakeLists.txt  README.md  run_benchmark.sh  run_correctness_test.sh
include/sort/: sort.hpp
src/sort/: sort.benchmark.cpp  sort.test.correctness.cpp
tests/: CMakeLists.txt  catch2_runner.main.cpp  google_benchmark_runner.main.cpp
